--- a/expenseTracker/package.json
+++ b/expenseTracker/package.json
@@ -16,7 +16,8 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.13.0"
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
