--- a/starter/package.json
+++ b/starter/package.json
@@ -20,6 +20,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
     "rate-limiter": "^0.2.0",
     "swagger-ui-express": "^4.1.6",
